examples/test/testpolicy4565.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4565
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key27: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value30
          key20: value43
          key29: value25
      podSelector:
        matchLabels:
          key19: value9
          key16: value17
          key37: value41
